Compelet Interpolation Learn what is interpolation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,27 @@
+<!-- What we can do in INTERPOLATION -->
+
 <h1>Hello, Angular {{ title }}</h1>
+
+<h1>Hello, Angular {{ data }}</h1>
+
+<h1>Hello, Angular {{ getFuncationData() }}</h1>
+
+<h1>{{ title == "First-Application" }}</h1>
+
+<!-- What we can't do in INTERPOLATION -->
+
+<!-- WE CAN NOT EDIT ANY VARIABLE IN HTML FILE (INTERPOLATION) -->
+<!-- <h1>{{ title = "First-Application" }}</h1>  -->
+<!-- it's throw an error -->
+
+<!-- WE CAN NOT CHECK TYPEOF ANY VARIABLE IN HTML FILE (INTERPOLATION) -->
+<!-- <h1>{{ typeof title }}</h1>  -->
+<!-- it's throw an error -->
+
+<!-- WE CAN NOT DO INCREMENT & DECREMENT IN HTML FILE (INTERPOLATION) -->
+<!-- <h1>{{ number++ }}</h1>  -->
+<!-- it's throw an error -->
+
+<!-- WE CAN NOT USE NEW KEYWORD IN HTML FILE (INTERPOLATION) -->
+<!-- <h1>{{ new title }}</h1>  -->
+<!-- it's throw an error -->
