--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,4 @@
 
 <h1>Hello, Angular {{ title }}</h1>
 
-<app-user-list></app-user-list>
-<app-student-list></app-student-list>
-<app-country-list></app-country-list>
+<app-login></app-login>
