Learn funcation calling in angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 
 <h1>Hello, Angular {{ title }}</h1>
 
-<app-login></app-login>
+<button (click)="getFuncation('kashyap')">Click by Kashyap</button>
