--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,5 @@
 <h1>{{ title }}</h1>
 
-<!-- KeyUp Event -->
-<br />
-<br />
-
-<input type="text" name="input" #input placeholder="Enter Your Name Here..." />
-
-<!-- Getting value onClick -->
-<button (click)="getInputData(input.value)">Get Value</button>
-
-<!-- Getting Field's Name Value -->
-<button (click)="getInputData(input.name)">Get Field Name</button>
-
-<!-- Getting Field's Placeholder Value -->
-<button (click)="getInputData(input.placeholder)">
-  Get Field Placeholder Text
-</button>
-
-<h3>Input box value: {{ inputData }}</h3>
+<button (click)="counterFuncation('decrement')">-</button>
+<h4>Value: {{ counterValue }}</h4>
+<button (click)="counterFuncation('increment')">+</button>
