--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<h1>{{ title }}</h1>
-
-<button (click)="counterFuncation('decrement')">-</button>
-<h4>Value: {{ counterValue }}</h4>
-<button (click)="counterFuncation('increment')">+</button>
+<h1 class="heading">{{ title }}</h1>
