--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <h1 class="heading">{{ title }}</h1>
 
-<h1 *ngIf="show=='show'; then ifBlock else elseBlock">
-  Learn Angular
-</h1>
-
-<ng-template #ifBlock>
-  <h1>'If' Condition</h1>
+<ng-template [ngIf]="color==='red'">
+  <h1 style="color: red;">Red text</h1>
 </ng-template>
 
-<ng-template #elseBlock>
-  <h1>Else Condition</h1>
+<ng-template [ngIf]="color==='green'">
+  <h1 style="color: green;">Green text</h1>
+</ng-template>
+
+<ng-template [ngIf]="color==='blue'">
+  <h1 style="color: blue;">Blue text</h1>
 </ng-template>
