--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <h1 class="heading">{{ title }}</h1>
 
-<div [ngSwitch]="color">
-  <div *ngSwitchCase="'red'" style="color: red;">You picked red color</div>
-  <div *ngSwitchCase="'green'" style="color: green;">You picked green color</div>
-  <div *ngSwitchCase="'blue'" style="color: blue;">You picked blue color</div>
-  <div *ngSwitchDefault>Pick again</div>
+<div *ngFor="let user of users">
+  <h2>Name is: {{ user.name }}</h2>
+  <p>Age is: {{ user.age }}</p>
 </div>
