--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,3 @@
-<h1 class="heading">{{ title }}</h1>
+<h1 [style.color]="color" [style.backgroundColor]="backgroundColor">{{ title }}</h1>
 
-<ul *ngFor="let user of users">
-  <li>Name is: {{ user.name }}</li>
-  <li>Age is: {{ user.age }}</li>
-  <li>Social Accounts:
-    <ul *ngFor="let social of user.socialAccounts">
-      <li>{{social.name}}</li>
-      <li>{{social.url}}</li>
-    </ul>
-  </li>
-
-</ul>
+<button type="button" (click)="changeColor()">Update color</button>
