--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1 [style.color]="color" [style.backgroundColor]="backgroundColor">{{ title }}</h1>
+<app-header></app-header>
 
-<button type="button" (click)="changeColor()">Update color</button>
+<h1>{{ title }}</h1>
