--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,20 @@
-<app-header></app-header>
-
 <h1>{{ title }}</h1>
+
+<form #basicForm="ngForm" (ngSubmit)="getData(basicForm.value)">
+  <input type="text" ngModel name="userName" placeholder="Enter user name">
+  <br>
+  <br>
+  <input type="number" ngModel name="userAge" placeholder="Enter user age">
+  <br>
+  <br>
+  <input type="email" ngModel name="userEmail" placeholder="Enter user email">
+  <br>
+  <br>
+  <button type="submit">Submit</button>
+</form>
+
+<ul>
+  <li>User Name: {{userGettedData.userName}}</li>
+  <li>User Age: {{userGettedData.userAge}}</li>
+  <li>User Email: {{userGettedData.userEmail}}</li>
+</ul>
