--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <h1 class="text-center my-5">{{ title }}</h1>
 
-  <app-child [childComponentTitleProps]="childComponentTitle"></app-child>
-
-  <div class="col-12 d-flex justify-content-center my-5">
-    <button class="btn btn-primary" (click)="updateChildComponentData()">Update title of child compoent</button>
+  <div class="row g-0 d-flex flex-row">
+    <ul class="col-md-6 col-sm-12 px-2" *ngFor="let user of userDetails">
+      <app-user-details [item]='user'></app-user-details>
+    </ul>
   </div>
 </div>
