--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+/* Google Font's for application */
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 
 body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: "Quicksand", sans-serif !important;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+}
