--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 <div class="container">
   <h1 class="text-center my-5">{{ title }}</h1>
 
-  <div class="row g-0 d-flex flex-row">
-    <ul class="col-md-6 col-sm-12 px-2" *ngFor="let user of userDetails">
-      <app-user-details [item]='user'></app-user-details>
-    </ul>
-  </div>
+  <app-user-details (updateDataEvent)="updateData($event)"></app-user-details>
 </div>
