--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -1,32 +1,3 @@
-<div class="col-12 card d-flex">
-    <div class="card-header">
-        <h3 class="m-0 p-0">User Details</h3>
-    </div>
+<input type="text" #input1>
 
-    <div class="card-body">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="form-group d-flex fs-5 align-items-center">
-                    User Name: <p class="fs-6 px-4 mt-3">{{item.name}}</p>
-                </div>
-                <div class="form-group d-flex fs-5 align-items-center">
-                    Age: <p class="fs-6 px-4 mt-3">{{item.age}}</p>
-                </div>
-                <div class="form-group d-flex fs-5 align-items-center">
-                    Address: <p class="fs-6 px-4 mt-3">{{item.address}}</p>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group d-flex fs-5 align-items-center">
-                    City: <p class="fs-6 px-4 mt-3">{{item.city}}</p>
-                </div>
-                <div class="form-group d-flex fs-5 align-items-center">
-                    State: <p class="fs-6 px-4 mt-3">{{item.state}}</p>
-                </div>
-                <div class="form-group d-flex fs-5 align-items-center">
-                    Zip: <p class="fs-6 px-4 mt-3">{{item.zip}}</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<button (click)="updateDataEvent.emit(input1.value)">Update Data Value</button>
