--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <div class="container">
   <h1 class="text-center my-5">{{ title }}</h1>
 
-  <div class="col-3">
-    <h3 class="my-5">Updated Value From Input Box : {{name}}</h3>
-
-    <input class="form-control" type="text" [(ngModel)]="name">
+  <div class="row g-0">
+    <div class="col-6 d-flex justify-content-between align-items-center">
+      <input type="text" class="mx-3 w-1 form-control" #inputOne placeholder="Enter Some Data To Show In Aler Box.">
+      <button class="col-3 btn btn-primary" (click)="getData(inputOne)">Click Me</button>
+    </div>
   </div>
 </div>
