--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div class="container">
   <h1 class="text-center my-5">{{ title }}</h1>
+  <h1 class="text-center my-5">{{ title | uppercase }}</h1>
+  <h1 class="text-center my-5">{{ convertToUpperCase(title) }}</h1>
+
+  <h2 class="text-center my-5">{{ today | date : "fullDate"}}</h2>
 </div>
