--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <div class="container">
   <h1 class="text-center my-5">{{ title }}</h1>
   <h1 class="text-center my-5">{{ title | uppercase }}</h1>
-  <h1 class="text-center my-5">{{ convertToUpperCase(title) }}</h1>
+  <h1 class="text-center my-5">{{ title | slice : 2 : 6 | uppercase}}</h1>
 
-  <h2 class="text-center my-5">{{ today | date : "fullDate"}}</h2>
+  <h1 class="text-center my-5">{{ user | json |uppercase }}</h1>
+
+  <h2>{{2.3 | number : '3.3-5'}}</h2>
+
+  <h2>{{ 20 | currency : 'INR' }}</h2>
 </div>
