--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,28 @@
-<div class="container">
-  <h1 class="text-center my-5">{{ title }}</h1>
-  <h2 class="text-center">{{ 20 | USDTOINR : 77.55 }}</h2>
+<div class="container ">
+  <div class="row g-0">
+    <div class="my-5 col-12 d-flex justify-content-center align-items-center">
+      <div class="col-4 card">
+        <div class="card-header">
+          <h2 class="m-0">{{title}}</h2>
+        </div>
+        <div class="card-body">
+          <form #loginForm="ngForm" (ngSubmit)=userLogin(loginForm.value)>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" name="emailAddress" class="form-control" aria-describedby="emailHelp"
+                placeholder="Enter email" ngModel>
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" name="password" class="form-control" placeholder="Password" ngModel>
+            </div>
+            <div class="my-2 form-group">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
