--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,16 +6,17 @@
           <h2 class="m-0">{{title}}</h2>
         </div>
         <div class="card-body">
-          <form #loginForm="ngForm" (ngSubmit)=userLogin(loginForm.value)>
+          <form [formGroup]='loginForm' (ngSubmit)="loginUser()">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
               <input type="email" name="emailAddress" class="form-control" aria-describedby="emailHelp"
-                placeholder="Enter email" ngModel>
+                placeholder="Enter email" formControlName="emailAddress">
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
-              <input type="password" name="password" class="form-control" placeholder="Password" ngModel>
+              <input type="password" name="password" class="form-control" placeholder="Password"
+                formControlName="password">
             </div>
             <div class="my-2 form-group">
               <button type="submit" class="btn btn-primary">Submit</button>
