--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,16 +7,23 @@
         </div>
         <div class="card-body">
           <form [formGroup]='loginForm' (ngSubmit)="loginUser()">
-            <div class="form-group">
+            <div class="my-2 form-group">
               <label for="exampleInputEmail1">Email address</label>
               <input type="email" name="emailAddress" class="form-control" aria-describedby="emailHelp"
                 placeholder="Enter email" formControlName="emailAddress">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              <span style="color: red; font-size: 12px; font-weight: 600; display: block;"
+                *ngIf="emailAddress && emailAddress.invalid && emailAddress.touched">Email address field
+                is
+                not valid</span>
             </div>
-            <div class="form-group">
+            <div class="my-2 form-group">
               <label for="exampleInputPassword1">Password</label>
               <input type="password" name="password" class="form-control" placeholder="Password"
                 formControlName="password">
+              <span style="color: red; font-size: 12px; font-weight: 600; display: block;"
+                *ngIf="password && password.invalid && password.touched">Password field
+                is
+                not valid</span>
             </div>
             <div class="my-2 form-group">
               <button type="submit" class="btn btn-primary">Submit</button>
