--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,7 @@
 <div class="container ">
-  <div class="row g-0">
-    <div class="my-5 col-12 d-flex justify-content-center align-items-center">
-      <div class="col-4 card">
-        <div class="card-header">
-          <h2 class="m-0">{{title}}</h2>
-        </div>
-        <div class="card-body">
-          <form [formGroup]='loginForm' (ngSubmit)="loginUser()">
-            <div class="my-2 form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" name="emailAddress" class="form-control" aria-describedby="emailHelp"
-                placeholder="Enter email" formControlName="emailAddress">
-              <span style="color: red; font-size: 12px; font-weight: 600; display: block;"
-                *ngIf="emailAddress && emailAddress.invalid && emailAddress.touched">Email address field
-                is
-                not valid</span>
-            </div>
-            <div class="my-2 form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" name="password" class="form-control" placeholder="Password"
-                formControlName="password">
-              <span style="color: red; font-size: 12px; font-weight: 600; display: block;"
-                *ngIf="password && password.invalid && password.touched">Password field
-                is
-                not valid</span>
-            </div>
-            <div class="my-2 form-group">
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
+  <h1 class="text-center my-5">{{ title }}</h1>
+  <h1 class="text-center my-5" appRedElement>{{ title }}</h1>
+
+  <h2 class="text-center my-5">Hello, I am kashyap kapdi</h2>
+  <h2 class="text-center my-5" appRedElement>How Are You ?</h2>
 </div>
