--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,26 @@
-<div class="container ">
-  <h1 class="text-center my-5">{{ title }}</h1>
-  <h1 class="text-center my-5" appRedElement>{{ title }}</h1>
+<div>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand text-black" routerLink="">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active text-black-50" aria-current="page" routerLink="">Home</a>
+            <a class="nav-link text-black-50" routerLink="about">About</a>
+            <a class="nav-link text-black-50" routerLink="user">User</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+</div>
 
-  <h2 class="text-center my-5">Hello, I am kashyap kapdi</h2>
-  <h2 class="text-center my-5" appRedElement>How Are You ?</h2>
+<div class="container">
+  <h1 class="text-center my-5">{{ title }}</h1>
+
+  <router-outlet></router-outlet>
 </div>
