Learn what is the dynamic routing in angular and how its work

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,8 @@
             <a class="nav-link active text-black-50" aria-current="page" routerLink="">Home</a>
             <a class="nav-link text-black-50" routerLink="about">About</a>
             <a class="nav-link text-black-50" routerLink="user">User</a>
+            <a class="nav-link text-black-50" routerLink="user/20">User - 20</a>
+            <a class="nav-link text-black-50" routerLink="user/40">User - 40</a>
           </div>
         </div>
       </div>
